--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,12 @@ p {
   align-items: center !important;
   justify-content: center !important;
 }
+
+.footer  {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
 /* Cards */
 .content {
   /* background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)); */
